[package]
authors = ["Konstantin Stepanov <me@kstep.me>"]
description = "A client library for MPD (music player daemon), like libmpdclient but in Rust"
documentation = "http://kstep.me/rust-mpd/mpd/index.html"
homepage = "https://github.com/kstep/rust-mpd"
license = "MIT/Apache-2.0"
name = "mpd"
repository = "https://github.com/kstep/rust-mpd.git"
version = "0.0.12"

[dependencies]
bufstream = "0.1.1"
serde = "1"
serde_derive = "1"
chrono = "0.4"

[dev-dependencies]
tempdir = "0.3.5"
unix_socket = "0.5.0"
